common/ast/tests/it/testdata/statement-error.txt
---------- Input ----------
create table a.b (c integer not null 1, b float(10))
---------- Output ---------
error: 
  --> SQL:1:38
  |
1 | create table a.b (c integer not null 1, b float(10))
  | ------                               ^ expected `)`, `NULL`, `NOT`, `DEFAULT`, `COMMENT`, or `,`
  | |                                     
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c float(10))
---------- Output ---------
error: 
  --> SQL:1:24
  |
1 | create table a (c float(10))
  | ------                 ^ expected `)`, `NULL`, `NOT`, `DEFAULT`, `COMMENT`, or `,`
  | |                       
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
create table a (c varch)
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | create table a (c varch)
  | ------          - ^^^^^
  | |               | |
  | |               | expected `BOOLEAN`, `BOOL`, `UINT8`, `TINYINT`, `UINT16`, `SMALLINT`, or 25 more ...
  | |               | while parsing type name
  | |               while parsing `<column name> <type> [NOT NULL | NULL] [DEFAULT <default value>] [COMMENT '<comment>']`
  | while parsing `CREATE TABLE [IF NOT EXISTS] [<database>.]<table> [<source>] [<table_options>]`


---------- Input ----------
drop table if a.b
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | drop table if a.b
  |               ^ expected `EXISTS`, `.`, `ALL`, or `;`


---------- Input ----------
truncate table a.b.c.d
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | truncate table a.b.c.d
  |                     ^ expected `PURGE` or `;`


---------- Input ----------
truncate a
---------- Output ---------
error: 
  --> SQL:1:10
  |
1 | truncate a
  | -------- ^ expected `TABLE`
  | |         
  | while parsing `TRUNCATE TABLE [<database>.]<table> [PURGE]`


---------- Input ----------
drop a
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | drop a
  |      ^ expected `DATABASE`, `SCHEMA`, `TABLE`, `VIEW`, `USER`, `ROLE`, or 2 more ...


---------- Input ----------
insert into t format
---------- Output ---------
error: 
  --> SQL:1:21
  |
1 | insert into t format
  | ------              ^ expected <Ident> or <QuotedString>
  | |                   
  | while parsing `INSERT INTO [TABLE] <table> [(<column>, ...)] (FORMAT <format> | VALUES <values> | <query>)`


---------- Input ----------
alter database system x rename to db
---------- Output ---------
error: 
  --> SQL:1:23
  |
1 | alter database system x rename to db
  | -----                 ^ expected `RENAME` or `.`
  | |                      
  | while parsing `ALTER DATABASE [IF EXISTS] <action>`


---------- Input ----------
create user 'test-e'@'localhost' identified bi 'password';
---------- Output ---------
error: 
  --> SQL:1:45
  |
1 | create user 'test-e'@'localhost' identified bi 'password';
  |                                             ^^ expected `WITH`, `BY`, or `;`


---------- Input ----------
drop usar if exists 'test-j'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | drop usar if exists 'test-j'@'localhost';
  |      ^^^^ expected `DATABASE`, `SCHEMA`, `TABLE`, `VIEW`, `USER`, `ROLE`, or 2 more ...


---------- Input ----------
alter user 'test-e'@'localhost' identifie by 'new-password';
---------- Output ---------
error: 
  --> SQL:1:33
  |
1 | alter user 'test-e'@'localhost' identifie by 'new-password';
  |                                 ^^^^^^^^^ expected `IDENTIFIED`, `WITH`, or `;`


---------- Input ----------
create role 'test'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:19
  |
1 | create role 'test'@'localhost';
  |                   ^ expected `;`


---------- Input ----------
drop role 'test'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:17
  |
1 | drop role 'test'@'localhost';
  |                 ^ expected `;`


---------- Input ----------
drop role role1;
---------- Output ---------
error: 
  --> SQL:1:11
  |
1 | drop role role1;
  | ----      ^^^^^ expected <QuotedString> or `IF`
  | |          
  | while parsing `DROP ROLE [IF EXISTS] '<role_name>'`


---------- Input ----------
GRANT ROLE test TO ROLE 'test-user';
---------- Output ---------
error: 
  --> SQL:1:12
  |
1 | GRANT ROLE test TO ROLE 'test-user';
  | ----- ---- ^^^^ expected <QuotedString>
  | |     |     
  | |     while parsing ROLE <role_name>
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
GRANT ROLE 'test' TO ROLE test-user;
---------- Output ---------
error: 
  --> SQL:1:27
  |
1 | GRANT ROLE 'test' TO ROLE test-user;
  | -----                     ^^^^ expected <QuotedString>
  | |                          
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
GRANT SELECT, ALL PRIVILEGES, CREATE ON * TO 'test-grant'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:15
  |
1 | GRANT SELECT, ALL PRIVILEGES, CREATE ON * TO 'test-grant'@'localhost';
  | ----- ------  ^^^ expected `USAGE`, `SELECT`, `INSERT`, `UPDATE`, `DELETE`, `CREATE`, or 5 more ...
  | |     |        
  | |     while parsing <privileges> ON <privileges_level>
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
GRANT SELECT, CREATE ON *.c TO 'test-grant'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:27
  |
1 | GRANT SELECT, CREATE ON *.c TO 'test-grant'@'localhost';
  | -----                     ^ expected `TO` or `*`
  | |                          
  | while parsing `GRANT { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } TO { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
SHOW GRANT FOR ROLE role1;
---------- Output ---------
error: 
  --> SQL:1:6
  |
1 | SHOW GRANT FOR ROLE role1;
  |      ^^^^^ expected `SETTINGS`, `STAGES`, `PROCESSLIST`, `METRICS`, `FUNCTIONS`, `DATABASES`, or 8 more ...


---------- Input ----------
REVOKE SELECT, CREATE, ALL PRIVILEGES ON * FROM 'test-grant'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:24
  |
1 | REVOKE SELECT, CREATE, ALL PRIVILEGES ON * FROM 'test-grant'@'localhost';
  | ------ ------          ^^^ expected `USAGE`, `SELECT`, `INSERT`, `UPDATE`, `DELETE`, `CREATE`, or 5 more ...
  | |      |                
  | |      while parsing <privileges> ON <privileges_level>
  | while parsing `REVOKE { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } FROM { [ROLE <role_name>] | [USER] <user> }`


---------- Input ----------
REVOKE SELECT, CREATE ON * TO 'test-grant'@'localhost';
---------- Output ---------
error: 
  --> SQL:1:28
  |
1 | REVOKE SELECT, CREATE ON * TO 'test-grant'@'localhost';
  | ------                     ^^ expected `FROM` or `.`
  | |                           
  | while parsing `REVOKE { ROLE <role_name> | schemaObjectPrivileges | ALL [ PRIVILEGES ] ON <privileges_level> } FROM { [ROLE <role_name>] | [USER] <user> }`


